fixing alignment of elements

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -241,5 +241,6 @@ a:hover {
 }
 
 legend {
-	width: 85%;
+	width: 100%;
+	margin-left: 10px;
 }
